[gd_scene load_steps=38 format=3 uid="uid://d0437jpiymqsk"]

[ext_resource type="Script" uid="uid://41w6i4fxdepq" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://dxsc5aibjwibx" path="res://Game_Asets/Player/PC-Sheet.png" id="1_l8h54"]
[ext_resource type="PackedScene" uid="uid://c7ln0antdfype" path="res://Bullet/bullet.tscn" id="2_btcbx"]
[ext_resource type="Texture2D" uid="uid://b3nwqym3c38xb" path="res://Explosion-Sheet.png" id="4_k53q1"]
[ext_resource type="Texture2D" uid="uid://dbo22dgruhmhs" path="res://ShipDamage-Sheet.png" id="5_fhl08"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ntmi"]
size = Vector2(28, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = ExtResource("1_l8h54")
region = Rect2(152, 152, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6f8"]
atlas = ExtResource("1_l8h54")
region = Rect2(228, 152, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpta"]
atlas = ExtResource("1_l8h54")
region = Rect2(0, 228, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmf2"]
atlas = ExtResource("1_l8h54")
region = Rect2(76, 228, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_pisgm"]
atlas = ExtResource("1_l8h54")
region = Rect2(152, 228, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ygp"]
atlas = ExtResource("1_l8h54")
region = Rect2(228, 228, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_k53q1"]
atlas = ExtResource("1_l8h54")
region = Rect2(0, 0, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhl08"]
atlas = ExtResource("1_l8h54")
region = Rect2(76, 0, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtle1"]
atlas = ExtResource("1_l8h54")
region = Rect2(152, 0, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_od3ui"]
atlas = ExtResource("1_l8h54")
region = Rect2(228, 0, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tjw"]
atlas = ExtResource("1_l8h54")
region = Rect2(0, 76, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3vf3"]
atlas = ExtResource("1_l8h54")
region = Rect2(76, 76, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = ExtResource("1_l8h54")
region = Rect2(152, 76, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = ExtResource("1_l8h54")
region = Rect2(228, 76, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbimk"]
atlas = ExtResource("1_l8h54")
region = Rect2(0, 152, 76, 76)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0h3t"]
atlas = ExtResource("1_l8h54")
region = Rect2(76, 152, 76, 76)

[sub_resource type="SpriteFrames" id="SpriteFrames_o28un"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfmf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ygp")
}],
"loop": true,
"name": &"idel",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k53q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhl08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtle1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od3ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00tjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3vf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbimk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0h3t")
}],
"loop": false,
"name": &"warmup",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btcbx"]
size = Vector2(28, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_o28un"]
atlas = ExtResource("4_k53q1")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n471f"]
atlas = ExtResource("4_k53q1")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emwf"]
atlas = ExtResource("4_k53q1")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hshwv"]
atlas = ExtResource("4_k53q1")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpjlu"]
atlas = ExtResource("4_k53q1")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwp6"]
atlas = ExtResource("4_k53q1")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qemgg"]
atlas = ExtResource("5_fhl08")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8viyr"]
atlas = ExtResource("5_fhl08")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm0op"]
atlas = ExtResource("5_fhl08")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_76lrf"]
atlas = ExtResource("5_fhl08")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_efx54"]
atlas = ExtResource("5_fhl08")
region = Rect2(200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_755ss"]
atlas = ExtResource("5_fhl08")
region = Rect2(250, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_bbimk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o28un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n471f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hshwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpjlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mwp6")
}],
"loop": false,
"name": &"explode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qemgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8viyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm0op")
}],
"loop": true,
"name": &"level1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76lrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efx54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_755ss")
}],
"loop": true,
"name": &"level2",
"speed": 5.0
}]

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("damage_anim")]
texture_filter = 1
position = Vector2(181, 131)
script = ExtResource("1_4ntmi")
bullet_scene = ExtResource("2_btcbx")
damage_anim = NodePath("Damaged")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_4ntmi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_o28un")
animation = &"warmup"

[node name="HitBox" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_btcbx")

[node name="FireDelay" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Firing origin" type="Node2D" parent="."]
position = Vector2(0, -16)

[node name="Damaged" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_bbimk")
animation = &"explode"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="FireDelay" to="." method="_on_fire_delay_timeout"]
[connection signal="animation_finished" from="Damaged" to="." method="_on_damaged_animation_finished"]
